--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta rel="shortcut icon" href="favicon.ico">
-    <meta rel="icon" href="favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://fonts.cdnfonts.com/css/myriad-pro" rel="stylesheet">
-    <link rel="stylesheet" href="/index.f0351039.css">
-    <script src="/index.227406fc.js" defer=""></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta rel="shortcut icon" href="favicon.ico" />
+    <meta rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="http://fonts.cdnfonts.com/css/myriad-pro" rel="stylesheet" />
+    <link rel="stylesheet" href="//html-apple-store/index.f0351039.css" />
+    <script src="//html-apple-store/index.227406fc.js" defer=""></script>
     <title>Apple Events - Apple</title>
   </head>
 
@@ -63,7 +63,9 @@
             </h3>
             <div class="button-container">
               <a class="button border-black text-black" href="#">Learn more</a>
-              <a class="button border-black text-black" href="#">View pricing</a>
+              <a class="button border-black text-black" href="#"
+                >View pricing</a
+              >
             </div>
           </div>
 
@@ -80,7 +82,9 @@
             </h3>
             <div class="button-container">
               <a class="button border-white text-white" href="#">Learn more</a>
-              <a class="button border-white text-white" href="#">View pricing</a>
+              <a class="button border-white text-white" href="#"
+                >View pricing</a
+              >
             </div>
           </div>
 
@@ -89,7 +93,7 @@
 
         <section class="section watch_series">
           <div class="content">
-            <img src="/watch_series.5832a6f5.png" alt="watch_series">
+            <img src="/watch_series.5832a6f5.png" alt="watch_series" />
             <h3 class="sub-text text-black">
               The largest, most advanced Always‑On Retina display. The most
               durable Apple Watch ever. Breakthrough health innovations. Up to
@@ -105,7 +109,7 @@
         </section>
         <section class="section ipad-mini">
           <div class="content">
-            <img src="/logo_ipad_mini.c56f0fde.png" alt="ipad mini logo">
+            <img src="/logo_ipad_mini.c56f0fde.png" alt="ipad mini logo" />
             <h3 class="sub-text text-black">
               Powerful A15 Bionic chip. New all‑screen design. Superfast 5G.
               Ultra Wide front camera with Center Stage. Now in four gorgeous
