--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="http://fonts.cdnfonts.com/css/myriad-pro" rel="stylesheet" />
-    <link rel="stylesheet" href="//html-apple-store/index.f0351039.css" />
-    <script src="//html-apple-store/index.227406fc.js" defer=""></script>
+    <link rel="stylesheet" href="/html-apple-store/index.f0351039.css" />
+    <script src="/html-apple-store/index.227406fc.js" defer=""></script>
     <title>Apple Events - Apple</title>
   </head>
 
