--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 
         <section class="section watch_series">
           <div class="content">
-            <img src="/watch_series.5832a6f5.png" alt="watch_series" />
+            <img
+              src="//html-apple-store/watch_series.5832a6f5.png"
+              alt="watch_series"
+            />
             <h3 class="sub-text text-black">
               The largest, most advanced Always‑On Retina display. The most
               durable Apple Watch ever. Breakthrough health innovations. Up to
@@ -109,7 +112,10 @@
         </section>
         <section class="section ipad-mini">
           <div class="content">
-            <img src="/logo_ipad_mini.c56f0fde.png" alt="ipad mini logo" />
+            <img
+              src="//html-apple-store/logo_ipad_mini.c56f0fde.png"
+              alt="ipad mini logo"
+            />
             <h3 class="sub-text text-black">
               Powerful A15 Bionic chip. New all‑screen design. Superfast 5G.
               Ultra Wide front camera with Center Stage. Now in four gorgeous
