--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta rel="shortcut icon" href="/html-apple-store/favicon.ico" />
-    <meta rel="icon" href="/html-apple-store/favicon.ico" />
+    <meta rel="shortcut icon" href="favicon.ico" />
+    <meta rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/html-apple-store/index.f0351039.css" />
     <script src="/html-apple-store/index.227406fc.js" defer=""></script>
