--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta rel="shortcut icon" href="favicon.ico" />
-    <meta rel="icon" href="favicon.ico" />
+    <meta rel="shortcut icon" href="./favicon.ico" />
+    <meta rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/index.css" />
+    <link rel="stylesheet" href="./src/css/index.css" />
     <title>Apple Events - Apple</title>
   </head>
 
