--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <section class="section watch_series">
           <div class="content">
-            <img src="/src/images/watch_series.png" alt="watch_series" />
+            <img src="./src/images/watch_series.png" alt="watch_series" />
             <h3 class="sub-text text-black">
               The largest, most advanced Always‑On Retina display. The most
               durable Apple Watch ever. Breakthrough health innovations. Up to
@@ -107,7 +107,7 @@
         </section>
         <section class="section ipad-mini">
           <div class="content">
-            <img src="/src/images/logo_ipad_mini.png" alt="ipad mini logo" />
+            <img src="./src/images/logo_ipad_mini.png" alt="ipad mini logo" />
             <h3 class="sub-text text-black">
               Powerful A15 Bionic chip. New all‑screen design. Superfast 5G.
               Ultra Wide front camera with Center Stage. Now in four gorgeous
